# effectivemobile

./: .env-non-dev  .envexample  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.cfg  start.sh
.github/workflows/: linter.yml
src/: alembic.ini
src/app/: service.py
src/app/api/: routes.py
src/app/api/orders/: handler.py  schemas.py
src/app/api/products/: handler.py  schemas.py
src/app/config/: config.py
src/app/services/: base_service.py  order_service.py  product_service.py
src/app/storages/: database.py
src/app/storages/models/: __init__.py  base_model.py  order_item.py  orders.py  products.py
src/migrations/: env.py
src/migrations/versions/: 1_create_tables.py  1_created_tables.py  2138412141e6_created_tables_2.py
src/tests/: conftest.py
src/tests/factories/: models.py
src/tests/integration/api/orders/: test_handler.py
src/tests/integration/api/products/: test_handler.py
src/tests/unit/services/: test_order_service.py
src/tools/: .env-non-dev  docker-compose.yml
src/tools_service/: docker-compose.yml
