[tool.poetry]
name = "effectivemobile"
version = "0.1.0"
description = ""
authors = ["shedko <v.shedko@kpedev.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

