[tool.poetry]
name = "effectivemobile"
version = "0.1.0"
description = ""
authors = ["shedko <v.shedko@kpedev.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
mypy = "^1.11.2"
wemake-python-styleguide = "^0.19.2"
flake8-noqa = "^1.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.extras]
lint = ["wemake-python-styleguide", "flake8-noqa"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

